[gd_scene load_steps=5 format=3 uid="uid://c1dbwo47lhe83"]

[ext_resource type="Script" path="res://scripts/mainMenu.gd" id="1_3pwqm"]
[ext_resource type="Texture2D" uid="uid://b4on7exho2xpb" path="res://assets/Tower 6.png" id="2_vr3sp"]
[ext_resource type="Theme" uid="uid://ddu5v0s6t3rx6" path="res://assets/Fonts/main_font.tres" id="3_h8l0w"]
[ext_resource type="Theme" uid="uid://dj3bjscfypv45" path="res://assets/Fonts/sub_theme.tres" id="4_raxnr"]

[node name="mainMenu" type="CanvasLayer"]
script = ExtResource("1_3pwqm")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.65098, 0.87451, 1)
position = Vector2(576, 324)
scale = Vector2(0.642857, 0.632813)
texture = ExtResource("2_vr3sp")

[node name="title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.15
anchor_right = 0.15
offset_left = -150.8
offset_top = 21.0
offset_right = 143.2
offset_bottom = 81.0
grow_horizontal = 2
theme = ExtResource("3_h8l0w")
theme_override_font_sizes/font_size = 40
text = "Greed Hero"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = -215.0
offset_right = -410.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2

[node name="playButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_raxnr")
text = "Play"

[node name="optionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_raxnr")
text = "Options"

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_raxnr")
text = "Quit"

[node name="Button" type="Button" parent="."]
offset_left = 1081.0
offset_top = 610.0
offset_right = 1144.0
offset_bottom = 641.0
text = "Credits"

[connection signal="pressed" from="VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
